--- a/src/rover_description/config/controllers.yaml
+++ b/src/rover_description/config/controllers.yaml
@@ -1,32 +1,27 @@
 controller_manager:
   ros__parameters:
-    update_rate: 1000 # Hz
+    update_rate: 250 
     use_sim_time: true
 
-    # List of controllers to load
     diff_drive_controller:
       type: diff_drive_controller/DiffDriveController
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
-# Parameters for the Diff Drive Controller
 diff_drive_controller:
   ros__parameters:
     use_sim_time: true
-    use_stamped_vel: false
-    # Wheel joint names
+    use_stamped_vel: true
     right_wheel_names: ["wheel_2", "wheel_3"]
     left_wheel_names: ["wheel_1", "wheel_4"]
 
-    # Robot physical properties
     wheel_separation: 0.5 
     wheel_radius: 0.11      
     wheel_separation_multiplier: 1.0
     left_wheel_radius_multiplier: 1.0
     right_wheel_radius_multiplier: 1.0
 
-    # Odometry settings
     publish_rate: 50.0
     odom_frame_id: odom
     base_frame_id: base_link 
@@ -34,25 +29,22 @@ diff_drive_controller:
     pose_covariance_diagonal: [0.001, 0.001, 0.0, 0.0, 0.0, 0.01]
     twist_covariance_diagonal: [0.001, 0.001, 0.0, 0.0, 0.0, 0.01]
 
-    # Other settings
     open_loop: false
     cmd_vel_timeout: 0.5
 
-    # Velocity and acceleration limits
     linear:
       x:
         has_velocity_limits: true
-        max_velocity: 1.0
+        max_velocity: 0.8
         has_acceleration_limits: true
-        max_acceleration: 1.0
+        max_acceleration: 0.5
     angular:
       z:
         has_velocity_limits: true
         max_velocity: 1.0
         has_acceleration_limits: true
-        max_acceleration: 1.0
+        max_acceleration: 0.8
 
-# Parameters for the Joint State Broadcaster (can be empty if defaults are fine)
 joint_state_broadcaster:
   ros__parameters:
     use_sim_time: true
