--- a/src/rover_description/config/controllers.yaml
+++ b/src/rover_description/config/controllers.yaml
@@ -25,7 +25,7 @@ diff_drive_controller:
     publish_rate: 50.0
     odom_frame_id: odom
     base_frame_id: base_link 
-    enable_odom_tf: true
+    enable_odom_tf: false
     pose_covariance_diagonal: [0.001, 0.001, 0.0, 0.0, 0.0, 0.01]
     twist_covariance_diagonal: [0.001, 0.001, 0.0, 0.0, 0.0, 0.01]
 
