--- a/src/rover_description/config/ekf.yaml
+++ b/src/rover_description/config/ekf.yaml
@@ -3,7 +3,7 @@
 ekf_filter_node_odom:
   ros__parameters:
     frequency: 30.0
-    two_d_mode: false
+    two_d_mode: true
     print_diagnostics: true
     publish_tf: true
 
@@ -15,7 +15,7 @@ ekf_filter_node_odom:
     odom0: diff_drive_controller/odom
     odom0_config: [false, false, false,
                   false, false, false,
-                  true,  true,  true,
+                  true,  true,  false,
                   false, false, true,
                   false, false, false]
     odom0_queue_size: 10
@@ -23,12 +23,12 @@ ekf_filter_node_odom:
 
     imu0: /imu
     imu0_config: [false, false, false,
-                  true,  true,  true,
+                  false, false, true,
                   false, false, false,
-                  true,  true,  true,
+                  false, false, true,
                   false, false, false]
 
-    imu0_differential: true
+    imu0_differential: false
     imu0_queue_size: 10
     imu0_remove_gravitational_acceleration: true
 
@@ -149,10 +149,11 @@ navsat_transform:
     frequency: 30.0
     delay: 3.0
     magnetic_declination_radians: 0.0 # For lat/long 55.944831, -3.186998
-    yaw_offset: 1.5708 # IMU reads 0 facing magnetic north, not east
+    yaw_offset: 0.0 # IMU reads 0 facing magnetic north, not east
     zero_altitude: true
-    broadcast_utm_transform: true
-    broadcast_utm_transform_as_parent_frame: true
+    broadcast_cartesian_transform: true
+    broadcast_cartesian_transform_as_parent_frame: true
     publish_filtered_gps: true
     use_odometry_yaw: true
-    wait_for_datum: false
+    wait_for_datum: true
+    datum: [49.9, 8.9, 0.0]
