--- a/src/rover_description/CMakeLists.txt
+++ b/src/rover_description/CMakeLists.txt
@@ -14,16 +14,17 @@ find_package(ament_cmake REQUIRED)
 install(
   PROGRAMS
     scripts/teleop.py
-    scripts/gps_waypoint_follower.py
     scripts/cmd_vel_relay.py
     scripts/aruco_detection.py
     scripts/aruco_detection1.py
     scripts/aruco_detection2.py
+    scripts/spiral_search.py
+    scripts/mission_initializer.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
 install(
-  DIRECTORY launch urdf meshes config worlds scripts maps 
+  DIRECTORY launch urdf meshes config worlds scripts maps models
   DESTINATION share/${PROJECT_NAME}
 )
 
