Add EKF nodes and config (excluding heavy model weights)

--- a/src/rover_description/package.xml
+++ b/src/rover_description/package.xml
@@ -38,10 +38,13 @@
   <depend>cartographer_ros</depend>
 
   <exec_depend>python3-opencv</exec_depend>
+  
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>python3-numpy</exec_depend>
   <exec_depend>python3-utm</exec_depend>
   <exec_depend>rclpy</exec_depend>
+  <exec_depend>python3-ultralytics</exec_depend>  
+  <exec_depend>python3-torch</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
