--- a/src/rover_description/config/nav2_gps_params.yaml
+++ b/src/rover_description/config/nav2_gps_params.yaml
@@ -101,11 +101,11 @@ controller_server:
       debug_trajectory_details: True
       min_vel_x: 0.0
       min_vel_y: 0.0
-      max_vel_x: 2.0
+      max_vel_x: 2.5
       max_vel_y: 0.0
-      max_vel_theta: 2.0
+      max_vel_theta: 2.5
       min_speed_xy: 0.0
-      max_speed_xy: 2.0
+      max_speed_xy: 2.5
       min_speed_theta: 0.0
       acc_lim_x: 2.5
       acc_lim_y: 0.0
@@ -113,7 +113,7 @@ controller_server:
       decel_lim_x: -2.5
       decel_lim_y: 0.0
       decel_lim_theta: -3.2
-      vx_samples: 30
+      vx_samples: 40
       vy_samples: 0
       vtheta_samples: 50
       sim_time: 2.5
@@ -153,7 +153,21 @@ local_costmap:
       height: 15
       resolution: 0.05
       robot_radius: 0.35
-      plugins: ["rgbd_obstacle_layer", "inflation_layer"]
+      plugins: ["obstacle_layer", "rgbd_obstacle_layer", "inflation_layer"]
+      obstacle_layer:
+        plugin: "nav2_costmap_2d::ObstacleLayer"
+        enabled: True
+        observation_sources: scan
+        scan:
+          topic: /scan
+          max_obstacle_height: 2.0
+          clearing: True
+          marking: True
+          data_type: "LaserScan"
+          raytrace_max_range: 5.0    # Slightly further than camera
+          raytrace_min_range: 0.0
+          obstacle_max_range: 4.5    # Match your camera range for consistency
+          obstacle_min_range: 0.0
       rgbd_obstacle_layer:
         plugin: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"
         enabled: true
@@ -200,8 +214,8 @@ local_costmap:
           model_type: 0    
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 1.0
-        inflation_radius: 1.0
+        cost_scaling_factor: 2.0
+        inflation_radius: 1.5
       always_send_full_costmap: True
   
   local_costmap_client:
@@ -227,11 +241,11 @@ global_costmap:
       rolling_window: True
       width: 100
       height: 100
-      plugins: ["rgbd_obstacle_layer", "inflation_layer"]
+      plugins: ["obstacle_layer", "rgbd_obstacle_layer", "inflation_layer"]
       rgbd_obstacle_layer:
         plugin: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"
         enabled: true
-        voxel_decay: 20.
+        voxel_decay: 40.0
         decay_model: 0
         voxel_size: 0.05
         track_unknown_space: true
@@ -271,11 +285,25 @@ global_costmap:
           vertical_fov_angle: 0.785  # default 0.7, radians
           horizontal_fov_angle: 1.047 # default 1.04, radians
           decay_acceleration: 10.0     # default 0, 1/s^2. If laser scanner MUST be 0
-          model_type: 0                # def
+          model_type: 0 
+      obstacle_layer:
+        plugin: "nav2_costmap_2d::ObstacleLayer"
+        enabled: true
+        observation_sources: scan
+        scan:
+          topic: scan
+          max_obstacle_height: 2.0
+          clearing: true
+          marking: true
+          data_type: "LaserScan"
+          raytrace_max_range: 10.0
+          raytrace_min_range: 0.0
+          obstacle_max_range: 8.0
+          obstacle_min_range: 0.0              
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 5.0
-        inflation_radius: 1.0
+        cost_scaling_factor: 2.0
+        inflation_radius: 1.5
       always_send_full_costmap: True
   
   global_costmap_client:
@@ -294,7 +322,7 @@ planner_server:
     GridBased:
       plugin: "nav2_navfn_planner/NavfnPlanner"
       tolerance: 0.5
-      use_astar: false
+      use_astar: true
       allow_unknown: true
 
 planner_server_rclcpp_node:
@@ -357,8 +385,8 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [2.0, 0.0, 1.0]
-    min_velocity: [-2.0, 0.0, -1.0]
+    max_velocity: [2.5, 0.0, 1.0]
+    min_velocity: [-2.5, 0.0, -1.0]
     max_accel: [2.5, 0.0, 3.2]
     max_decel: [-2.5, 0.0, -3.2]
     odom_topic: "odom"
