--- a/src/rover_hardware/CMakeLists.txt
+++ b/src/rover_hardware/CMakeLists.txt
@@ -15,6 +15,7 @@ add_library(${PROJECT_NAME} SHARED
   src/rover_can_interface.cpp
 )
 
+
 target_include_directories(${PROJECT_NAME} PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
@@ -40,6 +41,10 @@ install(
 install(
   DIRECTORY include/
   DESTINATION include
+)
+install(
+  DIRECTORY launch config
+  DESTINATION share/${PROJECT_NAME}
 )
 
 install(
