added different configs for nav and also added indivisual spiral nodes as well model checking files

--- a/src/rover_description/CMakeLists.txt
+++ b/src/rover_description/CMakeLists.txt
@@ -30,6 +30,7 @@ install(
     scripts/bottle_detection.py
     scripts/bottle_detection1.py
     scripts/bottle_detection2.py
+    scripts/spiral_search_alone.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
